# paperless-ngx

./: .build-config.json  .codecov.yml  .codespellrc  .docker-hub-test  .dockerignore  .drone.yml  .editorconfig  .env  .gitattributes  .gitignore  .hadolint.yml  .mise.toml  .mypy-baseline.txt  .pre-commit-config.yaml  .prettierrc  .prettierrc.js  .pyrefly-baseline.json  .python-version  .readthedocs.yml  .ruff.toml  .travis.yml  .yamlfmt  404.html  ADVANCED_OCR_PHASE4.md  AGENTS.md  AI_ML_ENHANCEMENT_PHASE3.md  AI_SCANNER_IMPLEMENTATION.md  AI_SCANNER_IMPROVEMENT_PLAN.md  AI_SCANNER_ROADMAP_SUMMARY.md  AI_WEBHOOKS_DOCUMENTATION.md  API_SPECIFICATIONS.md  ARCHITECTURE_EXTENSION.md  BITACORA_MAESTRA.md  CHANGES.rst  CHECKLIST_FINAL_CICD.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW_FIXES.md  CONTRIBUTING.md  (+110 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.devcontainer.sqlite-tika.yml  docker-compose.yml  setup.sh
.devcontainer/vscode/: launch.json  settings.json  tasks.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml  stale.yml  zizmor.yml
.github/DISCUSSION_TEMPLATE/: feature-requests.yml  support.yml
.github/ISSUE_TEMPLATE/: bug-report-2.md  bug-report.yml  bug_report.md  config.yml  feature_request.md  other.md
.github/scripts/: cleanup-tags.py  common.py  get-build-json.py  github.py
.github/workflow-scripts/: check-trailing-newline  check-trailing-whitespace
.github/workflows/: ansible.yml  build-and-release.yml  ci-backend.yml  ci-docker.yml  ci-docs.yml  ci-frontend.yml  ci-lint.yml  ci-release.yml  ci-static-analysis.yml  ci.yml  cleanup-tags.yml  codecov-comment.yml  codeql-analysis.yml  crowdin.yml  deploy.yml  docker-intellidocs.yml  docker-publish.yml  docker.yml  documentation.yml  frontend.yml  installer-library.yml  lock.yml  pr-bot.yml  project-actions.yml  release-chart.yml  repo-maintenance.yml  reusable-ci-backend.yml  reusable-ci-frontend.yml  reusable-workflow-builder.yml  sonar.yml  test.yml  translate-strings.yml
administration/: index.html
advanced_usage/: index.html
ansible/: README.md
ansible/defaults/: main.yml
ansible/meta/: main.yml
ansible/tasks/: install-release.yml  install-source.yml  main.yml
api/: index.html
assets/: extra.css
assets/javascripts/: glightbox.min.js
changelog/: index.html
charts/paperless-ngx/: .helmignore  Chart.yaml  LICENSE  README.md  README_CONFIG.md.gotmpl  values.yaml
ci/: deploy-docker
configuration/: index.html
deployment/: docker-compose.yml
development/: index.html
docker/: .pre-commit-config.yaml  README_INTELLIDOCS.md  docker-compose.env  docker-entrypoint.sh  docker-prepare.sh  edoc_cmd.sh  env-from-file.sh  flower-conditional.sh  gunicorn.conf.py  install_management_commands.sh  management_script.sh  paperless_cmd.sh  supervisord-rootless.conf  supervisord.conf  test-intellidocs-features.sh  wait-for-redis.py
docker-builders/: Dockerfile.frontend  Dockerfile.jbig2enc  Dockerfile.lxml  Dockerfile.pikepdf  Dockerfile.psycopg2  Dockerfile.qpdf  README.md  get-build-json.py
docker/compose/: .env  README.md  docker-compose.ci-test.yml  docker-compose.elasticsearch-kibana.yml  docker-compose.elasticsearch.yml  docker-compose.elesticsearch.yml  docker-compose.env  docker-compose.intellidocs-ghcr.yml  docker-compose.intellidocs.yml  docker-compose.lib.yaml  docker-compose.mariadb-tika.yml  docker-compose.mariadb.yml  docker-compose.portainer.yml  docker-compose.postgres-sentinel.yml  docker-compose.postgres.yml  (+6 more)
docs/: .markdownlint.yaml  .pre-commit-config.yaml  API_AI_SUGGESTIONS.md  Dockerfile  MIGRATION_1076_DELETION_REQUEST.md  Makefile  administration.md  administration.rst  advanced_usage.md  advanced_usage.rst  api.md  api.rst  changelog.md  changelog.rst  changelog_jonaswinkler.rst  conf.py  configuration.md  configuration.rst  consumption.rst  contributing.rst  customising.rst  development.md  extending.rst  faq.md  faq.rst  guesswork.rst  index.md  index.rst  migrating.rst  migration-v3.md  migration.md  minio-tenant-bucket-configuration.md  multi-tenant-db-preparation.md  package-lock.json  package.json  redis-celery-verification-results.md  redis-celery-verification.md  requirements.rst  requirements.txt  runtime-verification-evidence.md  (+9 more)
faq/: index.html
overrides/: README.md  tag_colour_preview.js
presentation/: README.md  index.html
resources/: logo.txt
scripts/: build-images.sh  db-inspect.sh  deploy-to-k3s.sh  docker-entrypoint.sh  edoc-webserver.socket  gunicorn.conf  index-repository.sh  make-release.sh  migrate_classifier_to_tenant.py  paperless-consumer.service  paperless-cron  paperless-scheduler.service  paperless-task-queue.service  paperless-webserver.service  post-consumption-example.sh  provision-tenant-bucket.sh  push-release.sh  start_services.sh  supervisord.conf  tag_perf_probe.py  test-bucket-isolation.sh  test-rclone-multibucket.sh  test-tenant-isolation.sh  test_celery_tasks.py  vagrant-provision  verify-db-preparation.sh  verify-postgres-multitenant.sh  verify-redis-celery.sh  verify-redis-simple.sh
search/: search_index.json
setup/: index.html
src/: .pre-commit-config.yaml  .travis.yml  THANKS.md  conftest.py  manage.py  manage_migration.py  pytest.ini  schema.yml  setup.cfg  tox.ini
src-ui/: .eslintrc.json  .gitignore  .pre-commit-config.yaml  README.md  angular.json  cypress.config.ts  cypress.json  eslint.config.js  extra-webpack.config.ts  jest.config.js  karma.conf.js  merge.py  messages.xlf  messages_merged.xlf  package-lock.json  package.json  paperless.conf  playwright.config.ts  pnpm-lock.yaml  proxy.conf.json  setup-jest.ts  test-config.helper.ts  tsconfig.json  tsconfig.spec.json
src-ui-v2/: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  LICENSE.md  README.md  angular.json  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vercel.json
troubleshooting/: index.html
usage/: index.html
vagrant/: setup.sh
(+2924 files in other folders)
